modify document